# TigerOS

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  REVIEW_REPORT.md  SECURITY.md
.github/: pull_request_template.md
cloud/: .env.example  README.md  docker-compose.yml  package-lock.json  package.json
docs/: BLE_DEBUGGING.md  BLE_PROVISIONING_PLAN.md  BLE_SENSOR_GATEWAY.md  CODEX_FOR_OSS_APPLICATION.md  HARDWARE_UI_AUDIO_PLAN.md  README.md  REQUIREMENTS_TRACKER.md  ROADMAP.md  UNIVERSAL_DEVICE_GATEWAY.md  freenove-media-kit-roadmap.md  (+2 more)
firmware/main/: CMakeLists.txt  api_routes.cpp  api_routes.h  audio_manager.cpp  audio_manager.h  auth_manager.cpp  auth_manager.h  ble_manager.cpp  ble_manager.h  ble_sensor_gateway.cpp  ble_sensor_gateway.h  ble_sensor_parser.cpp  ble_sensor_parser.h  ble_sensor_registry.cpp  ble_sensor_registry.h  board_support.cpp  board_support.h  cloud_client.cpp  cloud_client.h  device_adapter.h  device_manager.cpp  device_manager.h  device_registry.cpp  device_registry.h  inkbird_parser.cpp  inkbird_parser.h  main.cpp  mqtt_manager.cpp  mqtt_manager.h  nvs_store.cpp  nvs_store.h  ota_manager.cpp  ota_manager.h  tft_display.cpp  tft_display.h  tiger_log.cpp  tiger_log.h  web_server.cpp  web_server.h  wifi_manager.cpp  (+1 more)
firmware/main/adapters/: ble_sensor_adapter.cpp  ble_sensor_adapter.h  esphome_adapter.cpp  esphome_adapter.h  generic_adapter.cpp  generic_adapter.h  http_device_adapter.cpp  http_device_adapter.h  mqtt_device_adapter.cpp  mqtt_device_adapter.h  shelly_adapter.cpp  shelly_adapter.h  tasmota_adapter.cpp  tasmota_adapter.h
firmware/main/parsers/: atc_parser.cpp  atc_parser.h  bthome_parser.cpp  bthome_parser.h  inkbird_parser.cpp  inkbird_parser.h  thermobeacon_parser.cpp  thermobeacon_parser.h  unknown_ble_parser.cpp  unknown_ble_parser.h  xiaomi_parser.cpp  xiaomi_parser.h
(+24 files in other folders)
